--- a/styling.css
+++ b/styling.css
@@ -19,15 +19,7 @@ nav li {
     text-align: center;
     margin: auto;
 }
-#text1{
-    margin-right:auto;
-    padding-right:40%;
-    display: inline-flex;
-}
-#text2{
-    padding-left: 40%;
-    display: inline-flex;
-}
+
 #text3{
     justify-content: center;
 }
@@ -39,4 +31,7 @@ nav li {
 .embeds{
     width: 100%;
     height: 100%;
+}
+div{
+    display: flex;
 }
