--- a/styling.css
+++ b/styling.css
@@ -20,8 +20,9 @@ nav li {
     margin: auto;
 }
 
-#text3{
+.text3{
     justify-content: center;
+    text-align: center;
 }
 .contacts{
     display: inline-flex;
@@ -32,10 +33,14 @@ nav li {
     width: 100%;
     height: 100%;
 }
-div{
+.contentDiv{
     display: flex;
 }
 .text{
     margin-left: 10px;
     margin-right: 10px;
+}
+#text2 {
+    text-align: right;
+    margin: 10px;
 }
