--- a/styling.css
+++ b/styling.css
@@ -28,6 +28,7 @@ nav li {
     display: inline-flex;
     padding: 3px;
     margin: 3px;
+    text-align: center;
 }
 .embeds{
     width: 100%;
@@ -37,10 +38,10 @@ nav li {
     display: flex;
 }
 .text{
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 #text2 {
-    text-align: right;
+
     margin: 10px;
 }
