--- a/styling.css
+++ b/styling.css
@@ -29,6 +29,7 @@ nav li {
     padding: 3px;
     margin: 3px;
     text-align: center;
+    
 }
 .embeds{
     width: 100%;
@@ -36,6 +37,7 @@ nav li {
 }
 .contentDiv{
     display: flex;
+    font-size: 21px;
 }
 .text{
     margin-left: 15px;
@@ -43,7 +45,7 @@ nav li {
 }
 #text2 {
 
-    margin: 10px;
+    margin: 20px;
 }
 body{
     margin-left: 30px;
